--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Chocolist</string>
     <string name="title_created_at">出版日期: %1$s </string>
     <string name="title_rating">評分: %1$s </string>
+    <string name="search_bar_hint">關鍵字過濾</string>
 </resources>
