--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="search_bar_hint">關鍵字過濾</string>
     <string name="search_no_result">沒找到東西的喔</string>
     <string name="detail_page_title">詳細資訊</string>
+    <string name="dialog_ok">確定</string>
 </resources>
