--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Chocolist</string>
     <string name="title_created_at">出版日期: %1$s </string>
     <string name="title_rating">評分: %1$s </string>
+    <string name="title_view_counts">觀看次數: %1$s </string>
     <string name="search_bar_hint">關鍵字過濾</string>
     <string name="search_no_result">沒找到東西的喔</string>
     <string name="detail_page_title">詳細資訊</string>
